# examples

./: .gitignore  compile_proto_python.bat  generate_proto.bat  installProtobuf.txt  send_multicast_message.py
.claude/: settings.local.json
GUI/: Communicator.cs  Form1.Designer.cs  Form1.cs  GUIApp.csproj  GUIApp.sln  HeartbeatListener.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  README.md  UdpMulticastListener.csproj  UdpMulticastListener.sln  Utils.cs  ZeroMQController.cs
GUI/.claude/: settings.local.json
GUI/comm/: ConfigureBitResults.cs  SimulatorStatus.cs
STAMP_GUI/: AIECS_Controller.cs  Form1.Designer.cs  Form1.cs  Globals.cs  Program.cs  ProtobufZeroMQ_Usage.md  STAMP_Communicator.cs  STAMP_GUI.csproj  STAMP_GUI.sln
STAMP_GUI/Comm/: ConfigureBitResults.cs  ConfigureSTAMPStatus.cs  STAMPControl.cs
Simulator/: CMakeLists.txt  CommandListener.cpp  CommandListener.h  Controller.cpp  Controller.h  Globals.cpp  Globals.h  Heartbeat.cpp  Heartbeat.h  HeartbeatSimulator.sln  HeartbeatSimulator.vcxproj  HeartbeatSimulator.vcxproj.filters  NetworkComm.cpp  NetworkComm.h  README.md  Simulator.sln  Simulator.vcxproj  Simulator.vcxproj.filters  main.cpp  packages.config  vcpkg.json
Simulator/.claude/: settings.local.json
Simulator/comm/: ConfigureBitResults.pb.cc  ConfigureBitResults.pb.h  Configure_STAMP_Status.pb.cc  Configure_STAMP_Status.pb.h  STAMP_Control.pb.cc  STAMP_Control.pb.h  SimulatorStatus.pb.cc  SimulatorStatus.pb.h
proto/: ConfigureBitResults.proto  Configure_STAMP_Status.proto  STAMP_Control.proto  SimulatorStatus.proto
pyProto/: ConfigureBitResults_pb2.py  Configure_STAMP_Status_pb2.py  STAMP_Control_pb2.py
pyScripts/: send_configure_stamp_status.py  send_multicast_message.py  send_stamp_control.py
